fix button alignment on trips and listings pages

--- a/app/assets/stylesheets/api/my_trips.scss
+++ b/app/assets/stylesheets/api/my_trips.scss
@@ -86,6 +86,10 @@
     }
   }
 
+  .delete-button-holder {
+    margin-left: auto;
+  }
+
   .delete-button {
     box-sizing: border-box;
     cursor: pointer;
