--- a/app/assets/stylesheets/api/spot_listing.scss
+++ b/app/assets/stylesheets/api/spot_listing.scss
@@ -77,8 +77,10 @@
         // background-color: blue;
         display: flex;
         align-items: flex-end;
+        margin-left: auto;
 
         .delete-button {
+
           font-size: 16px;
           box-sizing: border-box;
           cursor: pointer;
@@ -89,7 +91,7 @@
           color: #fff7f8;
           width: 160px;
           height: 50px;
-          margin: 25px 0 0 0;
+          margin: 25px 0 0 10px;
           padding: 15px 0 15px 0;
           font-weight: 300;
           letter-spacing: 1.5px;
